Add water demo.

--- a/Tutorials/My_Terrain/CMakeLists.txt
+++ b/Tutorials/My_Terrain/CMakeLists.txt
@@ -5,11 +5,17 @@ project(My_Terrain CXX)
 set(SOURCE
     src/My_Terrain.cpp
     src/GroundMesh.cpp
+    src/CDLODTree.cpp
+    src/DebugCanvas.cpp
+    src/TerrainMap.cpp
 )
 
 set(INCLUDE
     src/My_Terrain.hpp
     src/GroundMesh.h
+    src/CDLODTree.h
+    src/DebugCanvas.h
+    src/TerrainMap.h
 )
 
 set(SHADERS)
