--- a/Tutorials/CMakeLists.txt
+++ b/Tutorials/CMakeLists.txt
@@ -30,3 +30,4 @@ add_subdirectory(Tutorial19_RenderPasses)
 add_subdirectory(Tutorial20_MeshShader)
 add_subdirectory(Tutorial21_RayTracing)
 add_subdirectory(My_Terrain)
+add_subdirectory(My_Water)
