Add PCG foliage project.

--- a/Tutorials/CMakeLists.txt
+++ b/Tutorials/CMakeLists.txt
@@ -31,3 +31,4 @@ add_subdirectory(Tutorial20_MeshShader)
 add_subdirectory(Tutorial21_RayTracing)
 add_subdirectory(My_Terrain)
 add_subdirectory(My_Water)
+add_subdirectory(My_PCGFoliage)
