--- a/Tutorials/My_Water/CMakeLists.txt
+++ b/Tutorials/My_Water/CMakeLists.txt
@@ -2,7 +2,13 @@ cmake_minimum_required (VERSION 3.6)
 
 project(My_Water CXX)
 
-set(SOURCE
+set(SOURCE	
+	src/EpipolarLightScattering.cpp	
+	src/LightManager.cpp
+	src/OceanWave.cpp
+	src/ReflectionProbe.cpp
+	src/RenderProfile.cpp
+	src/ShaderUniformDataMgr.cpp
     src/My_Water.cpp
     src/GroundMesh.cpp
     src/CDLODTree.cpp
@@ -11,6 +17,14 @@ set(SOURCE
 )
 
 set(INCLUDE
+	src/ImGuiProfiler/ImGuiProfilerRenderer.h
+	src/ImGuiProfiler/ProfilerTask.h
+	src/EpipolarLightScattering.hpp	
+	src/LightManager.h
+	src/OceanWave.h
+	src/ReflectionProbe.h
+	src/RenderProfile.h
+	src/ShaderUniformDataMgr.h
     src/My_Water.hpp
     src/GroundMesh.h
     src/CDLODTree.h
