--- a/Tutorials/CMakeLists.txt
+++ b/Tutorials/CMakeLists.txt
@@ -32,3 +32,4 @@ add_subdirectory(Tutorial21_RayTracing)
 add_subdirectory(My_Terrain)
 add_subdirectory(My_Water)
 add_subdirectory(My_PCGFoliage)
+add_subdirectory(My_Raytracing)
