--- a/Tutorials/CMakeLists.txt
+++ b/Tutorials/CMakeLists.txt
@@ -33,3 +33,4 @@ add_subdirectory(My_Terrain)
 add_subdirectory(My_Water)
 add_subdirectory(My_PCGFoliage)
 add_subdirectory(My_Raytracing)
+add_subdirectory(My_HairRender)
